<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">约战:精灵再临</string>
    <string name="cc_permit_open_url">应用请求打开页面，是否允许？</string>
    <string name="cc_permit">允许</string>
    <string name="cc_refuse">拒绝</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="bsgamesdk_dc_anti_bottom">我知道了</string>
    <string name="bsgamesdk_dc_anti_title">提示</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bsgamesdk_determine">确 定</string>
    <string name="bsgamesdk_closetitle">关闭</string>
    <string name="bsgamesdk_login">登  录</string>
    <string name="bsgamesdk_logo">logo</string>
    <string name="bsgamesdk_submit">提交</string>
    <string name="bsgamesdk_reg_login">注 册</string>
    <string name="bsgamesdk_accept_coupon">领取</string>
    <string name="bsgamesdk_username">用户名</string>
    <string name="bsgamesdk_tel_number">手机号</string>
    <string name="bsgamesdk_activation">激活码</string>
    <string name="bsgamesdk_email">Email</string>
    <string name="bsgamesdk_user_register">新用户注册</string>
    <string name="bsgamesdk_username_hit">账号(不可使用手机号和邮箱)</string>
    <string name="bsgamesdk_email_hit">有效邮箱地址</string>
    <string name="bsgamesdk_password_hit">密码(6–31位字符)</string>
    <string name="bsgamesdk_password_hit_16">密码(6–16位字符)</string>
    <string name="bsgamesdk_new_password_hit">请输入新密码</string>
    <string name="bsgamesdk_rememberpwd">记住登录密码</string>
    <string name="bsgamesdk_forgetpwd">忘记密码？</string>
    <string name="bsgamesdk_register_title">注 册</string>
    <string name="bsgamesdk_login_title">进入游戏</string>
    <string name="bsgamesdk_login_oneClick">一键授权登录</string>
    <string name="bsgamesdk_login_oneClickInfo">检测到bilibili账号</string>
    <string name="bsgamesdk_login_switchUser">切换账号</string>
    <string name="bsgamesdk_login_touristLogin">游客登录</string>
    <string name="wygamesdk_login_noaccount">没有账号？</string>
    <string name="wygamesdk_service">注册即同意《巫妖手游用户协议》</string>
    <string name="bsgamesdk_login_forgetPwd">忘记密码</string>
    <string name="bsgamesdk_reg_and_login">立即注册</string>
    <string name="bsgamesdk_quickReg">快速注册</string>
    <string name="wygamesdk_phone_Reg">手机号注册</string>
    <string name="wygamesdk_account_Reg">账号注册</string>
    <string name="wygamesdk_get_code">获取验证码</string>
    <string name="bsgamesdk_tourist_before">游客:</string>
    <string name="bsgamesdk_tourist_content">"请尽快升级为B站账号
避免游戏数据信息丢失"</string>
    <string name="bsgamesdk_tourist_content_pay">"游客身份需升级为正式账
号后才可充值!"</string>
    <string name="bsgamesdk_tourist_up">马上升级</string>
    <string name="bsgamesdk_tourist_switch">切换</string>
    <string name="bsgamesdk_tourist_enter">进入</string>
    <string name="bsgamesdk_welcome_change">切换账号</string>
    <string name="bsgamesdk_welcome_wel">欢迎回来,</string>
    <string name="bsgamesdk_welcome_default_name">↖(^ω^)↗!</string>
    <string name="bsgamesdk_obtain">获取</string>
    <string name="bsgamesdk_other_reg">其他注册方式</string>
    <string name="bsgamesdk_exit_btn_comfirm">确定</string>
    <string name="bsgamesdk_exit_btn_cancel">取消</string>
    <string name="bsgamesdk_exit_tv_content">确定退出游戏吗？</string>
    <string name="bsgamesdk_next">下一步</string>
    <string name="bsgamesdk_get_captcha">获取验证码</string>
    <string name="bsgamesdk_nickname">昵称</string>
    <string name="bsgamesdk_text_tip_paid">您未购买该游戏，请在bilibili游戏中心内确认后再进行登录</string>
    <string name="bsgamesdk_text_common_comfirm">我知道了</string>
    <string name="bsgamesdk_username_login_hit">账号/手机号/邮箱</string>
    <string name="wygamesdk_username_login_hit">请输入账号或手机号</string>
    <string name="wygamesdk_password_login_hi">请输入密码</string>
    <string name="wygamesdk_create_trumpet_hint">昵称长度不超过6个字符</string>

    <string name="wygamesdk_username_reg_hit">请输入账号(6-20位数字或字母)</string>
    <string name="wygamesdk_password_reg_hit">请输入密码(6-20位数字或字母)</string>
    <string name="wygamesdk_code_reg_hit">请输入验证码</string>
    <string name="wygamesdk_phone_reg_hit">请输入手机号</string>
    <string name="wygamesdk_password_reg_again_hit">再次输入密码</string>
    <string name="bsgamesdk_captcha_hit">验证码</string>
    <string name="bsgamesdk_username_activate_hit">激活码</string>
    <string name="bsgamesdk_fast_reg">免注册玩游戏</string>
    <string name="bsgamesdk_loadingTips">努力加载中，请稍候</string>
    <string name="bsgamesdk_app_name">sdk</string>
    <string name="bsgamesdk_pay_title">充值</string>
    <string name="bsgamesdk_reg_title">注 册</string>
    <string name="bsgamesdk_delbtn">del</string>
    <string name="bsgamesdk_warnpic">warnpic</string>
    <string name="bsgamesdk_agreement">服务条款</string>
    <string name="bsgamesdk_service">《会员注册协议》</string>
    <string name="bsgamesdk_agree">已阅读并同意</string>
    <string name="bsgamesdk_cancel">取消</string>
    <string name="bsgamesdk_sure">确认</string>
    <string name="bsgamesdk_retry">重试</string>
    <string name="bsgamesdk_user_change_password">修改密码</string>
    <string name="bsgamesdk_user_modify_account">修改默认账号</string>
    <string name="bsgamesdk_user_modify_account_hit">请输入账号(A–Za–z0–9_组成，4–32个字符)</string>
    <string name="bsgamesdk_network_error">网络不可用，请联网后重试</string>
    <string name="alipay_confirm_title">提示</string>
    <string name="alipay_ensure">确定</string>
    <string name="alipay_cancel">取消</string>
    <string name="alipay_content_description_icon">icon</string>
    <string name="alipay_refresh">刷新</string>
    <string name="alipay_processing">加载中</string>
    <string name="alipay_download">下载</string>
    <string name="alipay_download_fail">下载安装包失败</string>
    <string name="alipay_cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="alipay_cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="alipay_redo">重试</string>
    <string name="alipay_install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="alipay_install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="bsgamesdk_PermissionDesCription">service for bilibili application</string>
    <string name="bsgamesdk_coupon_title">新年礼券</string>
    <string name="bsgamesdk_coupon_title2">恭喜您获得了哔哩哔哩客服娘赠送的礼券：</string>
    <string name="bsgamesdk_coupon_title3">"注：
1、该礼券只可在本游戏使用。
2、礼券使用时间："</string>
    <string name="bsgamesdk_coupon_title4">"过期后自动消失
3、本活动最终解释权归哔哩哔哩游戏中心所有。"</string>
    <string name="bsgamesdk_coupon_time">2015.10.26 3：00~2015.11.26 3:00</string>
    <string name="bsgamesdk_coupon_itemname">5B币</string>
    <string name="bsgamesdk_point_content">"恭喜您，注册成功！
请登入bilibili官网www.bilibili.com，绑
定手机和邮箱，以便找回密码"</string>
    <string name="bsgamesdk_captcha_title">验证码已发送至手机号</string>
    <string name="bsgamesdk_authentication_tip">文化部《网络游戏管理暂行办法》要求，网络游戏用户需进行实名认证，请先进行实名认证再进入游戏。实名认证信息仅用于哔哩哔哩游戏实名认证，我们不会泄露或用于其他用途。游戏实名认证仅对防沉迷系统有效，不用于账号找回。</string>
    <string name="bsgamesdk_auth_title">游戏实名认证</string>
    <string name="bsgamesdk_hint_authentication_name">真实姓名</string>
    <string name="bsgamesdk_hint_authentication_ID_number">身份证号码</string>
    <string name="bsgamesdk_example_authentication_name">例如：张三</string>
    <string name="bsgamesdk_example_authentication_ID_number">例如：440106198202020555</string>
    <string name="bsgamesdk_text_authentication_submit">提交认证</string>
    <string name="bsgamesdk_authentication_success">"提交认证成功！

快快进入游戏，享受游戏的乐趣吧"</string>
    <string name="bsgamesdk_user_license">用户条款确认</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="bsgamesdk_user_license_agree">同意</string>
    <string name="bsgamesdk_user_license_disagree">不同意</string>
    <string name="bsgamesdk_text_tip_permittedMinor">您的账号达到未成年人支付额度限制条件，将对您的支付进行限制。</string>
    <string name="bsgamesdk_text_tip_unpermittedMinor">您的账号达到未成年人支付额度限制，暂无法为您提供支付服务。</string>
    <string name="bsgamesdk_text_permittedMinor_comfirm">我知道了，继续支付</string>
    <string name="bsgamesdk_text_refresh_captch">网络异常，点击画面刷新</string>
    <string name="bsgamesdk_text_back_captch">返回</string>
    <string name="bsgamesdk_loadingTipst">努力加载中，请稍后</string>
    <string name="bsgamesdk_binding_mail">绑定安全邮箱</string>
    <string name="bsgamesdk_binding_phone">绑定安全手机</string>
    <string name="bsgamesdk_text_tip_secure_binding_top">为了您的账号安全，请绑定您的安全邮箱或安全手机号</string>
    <string name="bsgamesdk_text_tip_secure_binding_bottom">绑定成功后，将可以通过安全邮箱或安全手机找回密码</string>
    <string name="bsgamesdk_text_forget_pwd">找回密码</string>
    <string name="bsgamesdk_text_refresh">刷新页面</string>
    <string name="bsgamesdk_text_error_web">网络异常，请重试</string>
    <string name="bsgamesdk_anti_bottom">我知道了</string>
    <string name="bsgamesdk_anti_center">请合理安排游戏时间，享受健康生活。具体规则详见官网公告</string>
    <string name="bsgamesdk_anti_top">【健康系统】您今日的累计游戏时间即将达到2小时，根据健康系统规则，<font color="#ff23aee5">5分钟后您今日将无法继续游戏</font></string>
    <string name="bsgamesdk_auth_name">请输入真实姓名</string>
    <string name="bsgamesdk_auth_id">请输入您的身份证号</string>
</resources>
