<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="wrap_content"
    android:background="@drawable/wygamesdk_login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <com.jiaohe.wygamsdk.widget.APScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="100.0"
        android:fillViewport="true">

        <LinearLayout
            android:id="@id/bsgamesdk_id_loginInputLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="?attr/bsgamesdk_title_logo_style"
                    android:layout_centerInParent="true" />

                <RelativeLayout
                    android:id="@id/bsgamesdk_id_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <ImageView style="?attr/bsgamesdk_close_button_style" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/wygamesdk_login_input_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@id/bsgamesdk_id_usernameLayout"
                    android:layout_width="305dp"
                    android:layout_height="36.0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="?attr/bsgamesdk_img_user" />

                    <com.jiaohe.wygamsdk.widget.EditableSpinner
                        android:id="@id/bsgamesdk_edit_username_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/wygamesdk_divide_line" />

                <LinearLayout
                    android:id="@id/bsgamesdk_id_passwordLayout"
                    android:layout_width="305dp"
                    android:layout_height="36.0dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="?attr/bsgamesdk_img_password" />

                    <EditText
                        android:id="@id/bsgamesdk_edit_password_login"
                        style="?attr/bsgamesdk_basic_editText_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wygamesdk_password_login_hi"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="32" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@id/bsgamesdk_buttonLogin"
                style="?attr/bsgamesdk_confirm_button_style"
                android:layout_width="305dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/bsgamesdk_login_title" />

            <RelativeLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@id/bsgamesdk_textview_login_toursitLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="20.0dp"
                    android:text="@string/wygamesdk_login_noaccount"
                    android:textColor="#ff777777"
                    android:textSize="12sp" />

                <TextView
                    android:id="@id/bsgamesdk_textview_quickRegister"
                    style="?attr/bsgamesdk_text_image_style"
                    android:layout_width="wrap_content"
                    android:layout_height="20.0dp"
                    android:layout_toRightOf="@id/bsgamesdk_textview_login_toursitLogin"
                    android:text="@string/bsgamesdk_reg_and_login" />

                <TextView
                    android:id="@id/bsgamesdk_textview_login_forgetPwd"
                    style="?attr/bsgamesdk_text_image_style"
                    android:layout_width="wrap_content"
                    android:layout_height="20.0dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/bsgamesdk_login_forgetPwd" />
            </RelativeLayout>
        </LinearLayout>
    </com.jiaohe.wygamsdk.widget.APScrollView>
</LinearLayout>