<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="wrap_content"
    android:background="@drawable/wygamesdk_login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <com.jiaohe.wygamsdk.widget.APScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="100.0"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="绑定手机"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#fffafbfe"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@id/wygamesdk_id_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <ImageView style="?attr/wygamesdk_close_button_style" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/wygamesdk_login_input_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@id/wygamesdk_id_usernameLayout"
                    android:layout_width="305dp"
                    android:layout_height="46dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/wygamesdk_ic_phone" />

                    <EditText
                        android:id="@id/wygamesdk_reg_username"
                        style="?attr/wygamesdk_basic_editText_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wygamesdk_phone_reg_hit"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="11" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/wygamesdk_divide_line" />

                <LinearLayout
                    android:id="@id/wygamesdk_id_passwordLayout"
                    android:layout_width="305dp"
                    android:layout_height="46dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/wygamesdk_ic_send" />

                    <EditText
                        android:id="@id/wygamesdk_edit_code_reg"
                        style="?attr/wygamesdk_basic_editText_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/wygamesdk_code_reg_hit"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLength="32" />


                    <TextView
                        android:id="@id/wygamesdk_textview_reg_code"
                        style="?attr/wygamesdk_text_image_style"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/wygamesdk_bg_get_code"
                        android:gravity="center"
                        android:text="@string/wygamesdk_get_code" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@id/wygamesdk_buttonReg"
                style="?attr/wygamesdk_confirm_button_style"
                android:layout_width="305dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/wygamesdk_exit_btn_comfirm" />

            <RelativeLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@id/wygamesdk_textview_service"
                    android:layout_width="wrap_content"
                    android:layout_height="20.0dp"
                    android:text="绑定手机可保证安全，不用担心忘记密码"
                    android:textColor="#fffafbfe"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>
    </com.jiaohe.wygamsdk.widget.APScrollView>
</LinearLayout>